popup css + add scroll functionality

--- a/options.html
+++ b/options.html
@@ -12,6 +12,7 @@
           <th>Site</th>
           <th>Selector (previous)</th>
           <th>Selector (next)</th>
+          <th>Scroll</th>
           <th></th>
         </tr>
       </thead>
