--- a/popup.html
+++ b/popup.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="popup.css" />
   </head>
   <body>
     <button id="settings" type="button">Options</button>
+    <button id="scroll-helper" type="button"></button>
     <button id="select-prev" type="button">Select Previous</button>
     <button id="select-next" type="button">Select Next</button>
     <button id="cancel" type="button">Cancel</button>
